fixed center align for title

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -97,6 +97,7 @@ html, body {
       }
       .tagline {
         text-align: center;
+        width: 100%;
         #title-header {
           font-size: 64pt;
           margin: 8pt auto;
